--- a/app/templates/inbox.html
+++ b/app/templates/inbox.html
@@ -173,6 +173,11 @@ mark {
   padding: 2px 3px;
   border-radius: 4px;
 }
+
+#supportCard .small-avatar {
+  display: none !important;
+}
+
 </style>
 
 <!-- HEADER -->
