--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -828,6 +828,7 @@ body[data-auth="0"] .mobile-tabbar {
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
+<link rel="stylesheet" href="/static/css/chatbot.css">
 
 </head>
 
@@ -1992,5 +1993,8 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 {% set immersive = immersive|default(false) %}
+{% include "chatbot.html" %}
+<script src="/static/js/chatbot.js"></script>
+
 </body>
 </html>
