--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -960,11 +960,16 @@ window.onpageshow = function(e){
       <div id="typeaheadPanel" class="typeahead d-none"></div>
 
       <div class="actions d-flex align-items-center gap-2 ms-auto">
-      {% if display_currency is string %}
-  {% set _cur = display_currency %}
+      {% if display_currency is defined %}
+  {% if display_currency is string %}
+    {% set _cur = display_currency %}
+  {% else %}
+    {% set _cur = display_currency(request) %}
+  {% endif %}
 {% else %}
-  {% set _cur = display_currency(request) %}
+  {% set _cur = 'USD' %}
 {% endif %}
+
 
 
         <!-- Messages -->
