--- a/app/templates/chatbot.html
+++ b/app/templates/chatbot.html
@@ -68,6 +68,7 @@ body[data-path="/chatbot"].has-tabbar {
     font-size: 18px;
 }
 </style>
+<link rel="stylesheet" href="/static/css/chatbot.css">
 
 <div class="sv-chatbot-page">
 
