--- a/app/templates/chatbot.html
+++ b/app/templates/chatbot.html
@@ -89,7 +89,7 @@ body[data-path="/chatbot"].has-tabbar {
     <!-- Center (logo + title stacked vertically) -->
     <div class="sv-header-center">
         <div class="sv-header-logo-wrap">
-                  <img src="/static/img/sevor-logo.png">
+            <img src="/static/sevor-logo.png" alt="Sevor">
         </div>
         <div class="sv-title">Soutien Sevor</div>
     </div>
